<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".view.activity.AboutUs">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:id="@+id/linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingVertical="10dp"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@color/seed">

      <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:layout_marginLeft="10dp" />

      <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="About Us"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/seed" />


    </LinearLayout>



    <ImageView
      android:id="@+id/button1"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/baseline_remove_24"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/linear_layout"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/heading1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text ="@string/heading1"
      android:textStyle="bold"
      android:layout_marginStart="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/button1"
      app:layout_constraintBottom_toBottomOf="@id/button1"
      />

    <TextView
      android:id="@+id/text1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/heading1"
      app:layout_constraintStart_toStartOf="parent"
      android:padding="20dp"
      android:text="@string/content1"/>

    <ImageView
      android:id="@+id/button2"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/baseline_remove_24"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/text1"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/heading2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text ="@string/heading2"
      android:textStyle="bold"
      android:layout_marginStart="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/button2"
      app:layout_constraintBottom_toBottomOf="@id/button2"
      />

    <TextView
      android:id="@+id/text2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/heading2"
      app:layout_constraintStart_toStartOf="parent"
      android:padding="20dp"
      android:text="@string/content2"/>

    <ImageView
      android:id="@+id/button3"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/baseline_remove_24"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/text2"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/heading3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text ="@string/heading3"
      android:textStyle="bold"
      android:layout_marginStart="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/button3"
      app:layout_constraintBottom_toBottomOf="@id/button3"
      />

    <TextView
      android:id="@+id/text3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/heading3"
      app:layout_constraintStart_toStartOf="parent"
      android:padding="20dp"
      android:text="@string/content3"/>

    <ImageView
      android:id="@+id/button4"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/baseline_remove_24"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/text3"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/heading4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text ="@string/heading4"
      android:textStyle="bold"
      android:layout_marginStart="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/button4"
      app:layout_constraintBottom_toBottomOf="@id/button4"
      />

    <TextView
      android:id="@+id/text4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/heading4"
      app:layout_constraintStart_toStartOf="parent"
      android:padding="20dp"
      android:text="@string/content4"/>

    <ImageView
      android:id="@+id/button5"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/baseline_remove_24"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/text4"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/heading5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text ="@string/heading5"
      android:textStyle="bold"
      android:layout_marginStart="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/button5"
      app:layout_constraintBottom_toBottomOf="@id/button5"
      />

    <TextView
      android:id="@+id/text5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/heading5"
      app:layout_constraintStart_toStartOf="parent"
      android:padding="20dp"
      android:text="@string/content5"/>


  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>