<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".view.activity.auth.AuthLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/teen_duh_logo" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_google_log_in"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log In With Google"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/google_circled"
            android:onClick="googleLogin" />

        <com.facebook.login.widget.LoginButton
          android:id="@+id/login_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_facebook_log_in"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/facebook_circled"
            android:onClick="facebookLogin"
            android:text="Log In With Facebook"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_phone_log_in"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log In With Phone Number"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/phone_circled"
            android:onClick="phoneLogin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="15dp">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="redirectTermsOfService"
        />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="redirectPrivacyPolicy"
        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>